--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,10 +1,11 @@
 # This file is auto-generated during the composer install
 parameters:
+    database_driver: pdo_pgsql
     database_host: 127.0.0.1
     database_port: null
     database_name: symfony
-    database_user: root
-    database_password: null
+    database_user: vtphan
+    database_password: vtphan
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
