--- a/src/OC/PlatformBundle/Resources/config/routing.yml
+++ b/src/OC/PlatformBundle/Resources/config/routing.yml
@@ -23,3 +23,6 @@ oc_platform_delete:
     defaults: { _controller:OCPlatformBundle:Advert:delete}
     requirements:
         id: \d+
+oc_platform_test:
+    path: /test
+    defaults: {_controller:OCPlatformBundle:Advert:test}
