--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
 oc_platform:
     resource: "@OCPlatformBundle/Resources/config/routing.yml"
     prefix:   /platform
+login:
+    pattern: /login
+    defaults: { _controller: OCUserBundle:Security:login}
+login_check:
+    pattern: /login_check
+logout:
+    pattern: /logout
