--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,7 @@
 # app/config/security.yml
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: sha512
+        Symfony\Component\Security\Core\User\User: plaintext 
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
