--- a/src/OC/PlatformBundle/Resources/config/services.yml
+++ b/src/OC/PlatformBundle/Resources/config/services.yml
@@ -14,3 +14,12 @@ services:
         arguments: [@request_stack, @doctrine.orm.entity_manager]
         tags:
             - { name: validator:constraint_validator, alias: oc_platform_antiflood}
+
+    oc_platform.beta.html:
+        class: OC\PlatformBundle\Beta\BetaHTML
+
+    oc_platform.beta.listener:
+        class: OC\PlatformBundle\Beta\BetaListener
+        arguments: [@oc_platform.beta.html,"2013-10-20"]
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: processBeta}
