--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -16,3 +16,9 @@ _errors:
 
 _main:
     resource: routing.yml
+
+oc_platform_translation:
+    path: /{_locale}/traduction/{name}
+    defaults: {_controller: OCPlatformBundle:Advert:translation}
+    requirements:
+        _local: en|fr
