--- a/src/OC/PlatformBundle/Resources/config/services.yml
+++ b/src/OC/PlatformBundle/Resources/config/services.yml
@@ -22,4 +22,9 @@ services:
         class: OC\PlatformBundle\Beta\BetaListener
         arguments: [@oc_platform.beta.html,"2013-10-20"]
         tags:
-            - { name: kernel.event_listener, event: kernel.response, method: processBeta}
+            - { name: kernel.event_listener, event: kernel.response, method: processBeta }
+
+    oc_platform.json_paramconverter:
+        class: OC\PlatformBundle\ParamConverter\JsonParamConverter
+        tags:
+            - { name: request.param_converter }
